# rubik

./: .gitignore  Pipfile  README.md  next.config.js  vercel.json
api/: .gitignore  index.py
backend/: Procfile  pyproject.toml  requirements.txt
backend/rubik/: __main__.py  coordcube.py  cube.py  cubiecube.py  facecube.py  kociembasolver.py  pieces.py  printer.py  server.py  solver.py  tables.py
backend/rubik/utils/: __init__.py
backend/tests/: testsolver.py
client/: next.config.js  package.json
client/src/pages/: index.tsx
frontend/: package-lock.json  package.json
frontend/public/: index.html
frontend/src/: App.tsx
frontend/src/components/: Header.tsx  Options.tsx
rubik/: __main__.py  benchmark.py  color.py  coordcube.py  cube.py  cubiecube.py  kociembasolver.py  lblsolver.py  matrix.py  pieces.py  printer.py  server.py  tables.py
server/: pyproject.toml  requirements.txt
server/api/: server.py
server/rubik/: __init__.py  __main__.py  benchmark.py  server.py
server/rubik/cubes/: coordcube.py  tables.py
server/rubik/solvers/: __init__.py  fastsolver.py  kociembasolver.py
tests/: testcube.py  testsolver.py
web/: package-lock.json  package.json
web/src/: App.tsx  flat.js
web/src/components/: Cube.tsx  Header.tsx  Options.tsx  Piece.tsx
