[tool.poetry]
name = "rubik"
version = "0.1.0"
description = ""
authors = ["Arvind <me@arvind.dev>"]

[tool.poetry.dependencies]
python = "^3.9"
numpy = "^1.20.3"
string-color = "^1.2.1"
fastapi = "^0.65.1"
uvicorn = "^0.13.4"
prettytable = "^2.1.0"
kociemba = "^1.2.1"

[tool.poetry.dev-dependencies]
autopep8 = "^1.5.7"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
